# nn-from-scratch

./: .gitignore  CMakeLists.txt  README.md  main.cpp  predictions.csv  run.sh  test_predictions.csv  train_predictions.csv
format/: .clang-format
src/: main.cpp  matrix.cpp  matrix.h  tensor.cpp  tensor.h
src/data/: data_preparator.cpp  data_preparator.h
src/neural_network/: matrix.cpp  matrix.h  network.cpp  network.h  optimizer.cpp  optimizer.h  tensor.cpp  tensor.h
src/utils/: train.cpp  train.h
